--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,26 @@
 yfinance
 pytrends
 psycopg2
-python-dotenv
-scikit-learn
-xgboost
+python-dotenv>=1.0.0
+scikit-learn>=1.3.2
+xgboost>=2.0.2
 urllib3==1.26.20
 google-genai
-fastapi 
-uvicorn 
-psycopg2-binary
-seaborn
-plotly
-statsmodels
-shap
-causalimpact
+fastapi>=0.104.0
+uvicorn>=0.24.0
+psycopg2-binary>=2.9.9
+seaborn>=0.13.0
+plotly>=5.18.0
+statsmodels>=0.14.0
+shap>=0.43.0
+causalimpact>=0.3.2
 # gxx
-ipywidgets
-matplotlib
-pandas
-numpy
+ipywidgets>=8.1.1
+matplotlib>=3.8.2
+pandas>=2.1.3
+numpy>=1.26.2
 scipy
-nbformat
-prophet
-ruptures
+nbformat>=5.9.2
+prophet>=1.1.5
+ruptures>=1.1.9
+python-multipart>=0.0.6
