--- a/src/app/api/ml/render.yaml
+++ b/src/app/api/ml/render.yaml
@@ -3,10 +3,8 @@ services:
     name: ml-analysis-api
     env: python
     plan: free
-    rootDir: src/app/api/ml
-    buildCommand: |
-      pip install -r ../../../requirements.txt
-    startCommand: python -m uvicorn server:app --host 0.0.0.0 --port $PORT
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn server:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.9
