--- a/src/app/api/ml/render.yaml
+++ b/src/app/api/ml/render.yaml
@@ -3,6 +3,7 @@ services:
     name: simple-timeseries-analysis
     env: python
     plan: free
+    rootDir: src/app/api/ml
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn server:app --host 0.0.0.0 --port $PORT
     envVars:
