--- a/src/app/api/ml/render.yaml
+++ b/src/app/api/ml/render.yaml
@@ -5,12 +5,10 @@ services:
     plan: free
     rootDir: src/app/api/ml
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn server:app --host 0.0.0.0 --port $PORT
+    startCommand: uvicorn server:app --host 0.0.0.0 --port 8080
     envVars:
       - key: PYTHON_VERSION
         value: 3.9
-      - key: PORT
-        value: 8080
       - key: ENVIRONMENT
         value: production
     autoDeploy: true
