--- a/src/app/api/ml/render.yaml
+++ b/src/app/api/ml/render.yaml
@@ -5,7 +5,7 @@ services:
     plan: free
     rootDir: src/app/api/ml
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn server:app --host 0.0.0.0 --port 8080
+    startCommand: uvicorn server:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.9
