--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     "@mui/material": "^5.15.10",
     "@mui/x-date-pickers": "^6.18.6",
     "@supabase/supabase-js": "^2.49.1",
+    "@upstash/redis": "^1.34.5",
+    "apache-arrow": "^19.0.1",
     "d3": "^7.8.5",
     "date-fns": "^2.30.0",
     "next": "14.1.0",
     "papaparse": "^5.5.2",
+    "parquetjs": "^0.11.2",
     "plotly.js": "^2.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-plotly.js": "^2.6.0",
-    "recharts": "^2.12.0"
+    "recharts": "^2.12.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
@@ -34,6 +38,7 @@
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "@types/react-plotly.js": "^2.6.3",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
