--- a/src/app/api/ml/requirements.txt
+++ b/src/app/api/ml/requirements.txt
@@ -2,25 +2,27 @@ yfinance
 pytrends
 psycopg2
 python-dotenv>=1.0.0
-scikit-learn>=1.3.2
-xgboost>=2.0.2
+scikit-learn>=1.2.2
+xgboost>=1.7.5
 urllib3==1.26.20
 google-genai
-fastapi>=0.104.0
-uvicorn>=0.24.0
+fastapi>=0.95.0
+uvicorn>=0.21.1
 psycopg2-binary>=2.9.9
 seaborn>=0.13.0
 plotly>=5.18.0
 statsmodels>=0.14.0
-shap>=0.43.0
+shap>=0.41.0
 causalimpact>=0.2.6
 # gxx
 ipywidgets>=8.1.1
-matplotlib>=3.8.2
-pandas>=2.1.3
-numpy>=1.26.2
+matplotlib>=3.7.1
+pandas>=1.5.3
+numpy>=1.24.2
 scipy
 nbformat>=5.9.2
 prophet>=1.1.5
 ruptures>=1.1.9
 python-multipart>=0.0.6
+pydantic>=1.10.7
+requests>=2.28.1
