--- a/backend-ml/requirements.txt
+++ b/backend-ml/requirements.txt
@@ -21,3 +21,12 @@ ruptures>=1.1.9
 python-multipart>=0.0.6
 pydantic>=1.10.7
 requests>=2.28.1
+
+# Added for Redis and DuckDB integration
+upstash-redis>=1.0.0
+pyarrow>=14.0.1
+duckdb>=0.9.2
+httpx>=0.24.1
+
+# Added for production deployment
+gunicorn>=21.2.0
