--- a/backend-ml/requirements.txt
+++ b/backend-ml/requirements.txt
@@ -16,7 +16,7 @@ matplotlib>=3.7.1
 pandas>=1.5.3
 numpy>=1.24.2
 scipy
-prophet>=1.1.5
+prophet>=1.1.9
 ruptures>=1.1.9
 python-multipart>=0.0.6
 pydantic>=1.10.7
@@ -27,6 +27,9 @@ upstash-redis>=1.0.0
 pyarrow>=14.0.1
 duckdb>=0.9.2
 httpx>=0.24.1
+
+# Added for memory optimization
+psutil>=5.9.0
 
 # Added for production deployment
 gunicorn>=21.2.0
